--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             <li><a href="">seo optimization</a></li>
             <li><a href="">education</a></li>
             <li><a href="">comic contents</a></li>
+            <li><a href="">other contents</a></li>
         </ul>
     </aside>
     <!--This is the main content-->
